# everBrowser

./: .gitignore  CLAUDE.md  README.md  chat.user.js  config.json  daemon.py  index.html  pyproject.toml
.github/: FUNDING.yml
client/: app.js  index.html  style.css
client/css/: font-family.css  source-han-sans.css  source-han-sans.offline.css  source-han-serif.css  source-han-serif.offline.css
