[project]
name = "everbrowser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "langchain>=1.0.5",
    "langchain-mcp-adapters>=0.1.12",
    "langchain-openai>=1.0.2",
    "pillow>=12.0.0",
    "psutil>=7.1.3",
    "pytest-playwright>=0.7.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.38.0",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple"
default = true
